Media queries and color tweaks

--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
     </div>
     <footer class="blog-footer" role="contentinfo">
       <div class="frame">
-        <p>Copyright © 2013 - Tom Spencer -
-          <span class="credit">Powered by <a href="http://octopress.org">Octopress</a>
-          </span>
-        </p>
+        <p>Copyright © 2013 - Tom Spencer</p>
+        <p><span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span></p>
       </div>
     </footer>
   </div>
